[tool.poetry]
name = "commerce-api"
version = "0.1.0"
description = ""
authors = ["Daniel Ale <danielale9291@gmail.com>"]
readme = "README.md"
packages = [{include = "commerce_api"}]

[tool.poetry.dependencies]
python = "^3.10"
pynest-api = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
